# doiget-tdm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  docs.yml
docs/: concepts.rst  conf.py  configuration.rst  index.rst  publishers.rst  substitutions.txt  workflow.rst
docs/publishers/: avail_publishers.rst  index.rst  new_publisher.rst
docs/reference/: api.rst  cmd.rst  crossref.rst  data.rst  doi.rst  format.rst  fulltext.rst  index.rst  metadata.rst  publisher.rst  source.rst  validate.rst  web.rst  work.rst
src/doiget/: __init__.py  acquire.py  cli.py  config.py  crossref.py  data.py  doi.py  errors.py  format.py  fulltext.py  log.py  metadata.py  publisher.py  source.py  status.py  validate.py  web.py  work.py
src/doiget/publishers/: __init__.py  _elsevier.py  _sage.py
src/doiget_tdm/: __init__.py  acquire.py  cli.py  config.py  crossref.py  data.py  doi.py  errors.py  format.py  fulltext.py  generic.py  log.py  metadata.py  paths.py  publisher.py  source.py  status.py  validate.py  web.py  work.py
src/doiget_tdm/publishers/: __init__.py  _ama.py  _apa.py  _elsevier.py  _frontiers.py  _iop.py  _peerj.py  _plos.py  _pnas.py  _royal_society.py  _sage.py  _springer_nature.py  _taylor_and_francis.py  _wiley.py
test_data/: example_crossref_metadata.json
tests/: test_crossref.py  test_doi.py  test_metadata.py  test_web.py
