[project]
name = "doiget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "limiter>=0.5.0",
    "platformdirs>=4.3.6",
    "puremagic>=1.27",
    "pydantic-settings>=2.5.2",
    "pydantic[email]>=2.9.2",
    "pysftp>=0.2.9",
    "pysimdjson>=6.0.2",
    "requests>=2.32.3",
    "requests-ratelimiter>=0.7.0",
    "retryhttp[requests]>=1.1.0",
    "tzdata>=2024.1",
]

[project.scripts]
hello = "doiget:hello"

[project.optional-dependencies]
interactive = [
    "ipython>=8.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "repo-review>=0.11.2",
    "ruff>=0.6.7",
    "sp-repo-review[cli]>=2024.8.19",
    "types-pysftp>=0.2.17.20240106",
    "types-requests>=2.32.0.20240914",
]

# until uv gets a task runner
[tool.poe.tasks]
test = "pytest --cov --cov-report term-missing"
typecheck = "mypy ."
lint = "ruff check"
style = "black ."
repo-review = "repo-review"
ipython = "uv run --extra interactive ipython"

[tool.black]
line-length = 88
preview = false
skip-source-first-line = false
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.ruff]
exclude = ["docs", "tests"]
lint.select = [
  "E",  # error
  "F",  # pyflakes
  "UP",  # pyupgrade
  "N",  # pep8-naming
  "ANN",  # flake8-annotations
  "A",  # flake8-builtins
  "PTH",  # flake8-usepathlib
  "B",  # flake8-bugbear
  "Q",  # flake8-quotes
  "ARG",  # flake8-unused-arguments
  "NPY",  # numpy
  "PERF",  # perflint
  "RUF",  # ruff
]
lint.ignore = [
  "ANN101",  # typing self
  "PERF203",  # performance overhead from try/catch in loops
]

[tool.mypy]
# corresponding to --strict
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
warn_unreachable = true
untyped_calls_exclude = []
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
plugins = [
  "pydantic.mypy"
]
exclude = ["docs", "tests"]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true


[tool.repo-review]
ignore = [
  "RTD",  # not using readthedocs
  "RF102",  # not a fan of isort
  "PC", "PY006",  # not using pre-commit
  "PY007",  # poe not recognised as a task runner
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
